# cpx-mat2by2

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md
src/: lib.rs
