[package]
authors = ["En-Jui Chang"]
name = "cpx-mat2by2"
version = "0.1.0"
edition = "2024"
description = "To power the rust-quantum project, this library provides a robust AltMat type for a single qubit, specifically optimized for the intensive complex number multiplications required for quantum gate applications and tensor product operations."
license = "MIT OR Apache-2.0"

readme = "README.md"
keywords = ['complex-matrix']

[dependencies]
cpx-coords = { path = "../cpx-coords"}